Fix right white space on mobile

--- a/beta/css/phone.css
+++ b/beta/css/phone.css
@@ -38,6 +38,7 @@
 
 	.home section.education .educard {
 		width: 100%;
+		margin: 0;
 		margin-bottom: 40px;
 	}
 
